crates/wac-parser/tests/resolution/fail/mismatched-kind.wac
package test:comp;

import x: interface {
    type x = u32;
};

let i = new foo:bar { x };
